--- a/checkpoint-3-htmlandcssstyle.html
+++ b/checkpoint-3-htmlandcssstyle.html
@@ -20,12 +20,14 @@
 			      <section><!-- selling points -->
 				    	<div>
                             <section class="selling-points"> <!--selling points-->
-                            <section class="selling-points container"> <!--selling points-->    
+                            <section class="selling-points container"><!--selling points-->  
+                                <div class="clearfix">  
                         <div class="point column third">
                           <span class="ion-music-note"></span>
                         <h5 class="point-title">Choose your music</h5>
                         <p class="point-description">The world is full of music; why should you have to listen to music that someone else chose?</p>  
                        </div>
+                                </div>
                             </section>
                             </section>
              <div>
