--- a/checkpoint-3-htmlandcssstyle.html
+++ b/checkpoint-3-htmlandcssstyle.html
@@ -11,8 +11,11 @@
     </head>
         <body class="landing">
             <nav class="navbar"><!--nav bar-->
-					<img src="bloc_jams_logo.png" alt="bloc jams logo" class="logo">
-            </nav>
+         <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo" class="logo">
+            
+         <div class="links-container">
+             <a href="collection.html" class="navbar-link">collection</a>
+         </div>
 				<section><!--hero content --> 
                  <section class="hero content">  
                      <h1 class="hero-title">Turn the music up!</h1>
