--- a/collection.html
+++ b/collection.html
@@ -25,8 +25,10 @@
              <div class="collection-album-info caption">
                  <p>
                      <a class="album-name" href="#">The Colors</a>
+                     <a class="album-name" href="album.html">The Colors</a>
                      <br/>
                      <a href="#">Pablo Picasso</a>
+                     <a href="album.html">Pablo Picasso</a>
                      <br/>
                      X songs
                      <br/>
