--- a/index.html
+++ b/index.html
@@ -43,37 +43,52 @@
         </section>
         
     <script>
-         var animatePoints = function() {
- 
-                 var points = document.getElementsByClassName('point');
- 
-                 var revealFirstPoint = function() {
-                     points[0].style.opacity = 1;
-                     points[0].style.transform = "scaleX(1) translateY(0)";
-                     points[0].style.msTransform = "scaleX(1) translateY(0)";
-                     points[0].style.WebkitTransform = "scaleX(1) translateY(0)";
-                 };
- 
-                 var revealSecondPoint = function() {
-                     points[1].style.opacity = 1;
-                     points[1].style.transform = "scaleX(1) translateY(0)";
-                     points[1].style.msTransform = "scaleX(1) translateY(0)";
-                     points[1].style.WebkitTransform = "scaleX(1) translateY(0)";
-                 };
- 
-                 var revealThirdPoint = function() {
-                     points[2].style.opacity = 1;
-                     points[2].style.transform = "scaleX(1) translateY(0)";
-                     points[2].style.msTransform = "scaleX(1) translateY(0)";
-                     points[2].style.WebkitTransform = "scaleX(1) translateY(0)";
-                 };
- 
-                 revealFirstPoint();
-                 revealSecondPoint();
-                 revealThirdPoint();
-             };
+//         var animatePoints = function(
+//         callbackFunction(ion-music-waves, function()) {
+//                 document.write("More Freedom, for your music")
+//});
+//         callbackFunction(ion-radio-waves, function()) {
+//                 document.write("More Freedom, no limits")
+//});
+//         callbackFunction(ion-iphone, function()) {
+//                 document.write("More Freedom, on any device")
+//});
+//           function callbackFunction(x, c){
+//           document.write(x);
+//           c();
+//}               
+//         ) {
+// 
+//                 var points = document.getElementsByClassName('point');
+// 
+//                 var revealFirstPoint = function() {
+//                     points[0].style.opacity = 1;
+//                     points[0].style.transform = "scaleX(1) translateY(0)";
+//                     points[0].style.msTransform = "scaleX(1) translateY(0)";
+//                     points[0].style.WebkitTransform = "scaleX(1) translateY(0)";
+//                 };
+// 
+//                 var revealSecondPoint = function() {
+//                     points[1].style.opacity = 1;
+//                     points[1].style.transform = "scaleX(1) translateY(0)";
+//                     points[1].style.msTransform = "scaleX(1) translateY(0)";
+//                     points[1].style.WebkitTransform = "scaleX(1) translateY(0)";
+//                 };
+// 
+//                 var revealThirdPoint = function() {
+//                     points[2].style.opacity = 1;
+//                     points[2].style.transform = "scaleX(1) translateY(0)";
+//                     points[2].style.msTransform = "scaleX(1) translateY(0)";
+//                     points[2].style.WebkitTransform = "scaleX(1) translateY(0)";
+//                 };
+// 
+//                 revealFirstPoint();
+//                 revealSecondPoint();
+//                 revealThirdPoint();
+//             };
         
         </script>
+         <script src="scripts/utilities.js"></script>
          <script src="scripts/landing.js"></script>
     </body>
 </html>
