--- a/collection.html
+++ b/collection.html
@@ -9,7 +9,6 @@
          <link rel="stylesheet" type="text/css" href="styles/main.css">
          <link rel="stylesheet" type="text/css" href="styles/collection.css">
      </head>
-     <body>
          <body class="collection">
            <nav class="navbar"> <!-- nav bar -->
              <a href="index.html" class="logo">
@@ -20,62 +19,10 @@
              </div>
          </nav>
          <section class="album-covers container clearfix">
-         <div class="collection-album-container column fourth">
-             <img src="assets/images/album_covers/01.png"/>
-             <div class="collection-album-info caption">
-                 <p>
-                     <a class="album-name" href="#">The Colors</a>
-                     <a class="album-name" href="album.html">The Colors</a>
-                     <br/>
-                     <a href="#">Pablo Picasso</a>
-                     <a href="album.html">Pablo Picasso</a>
-                     <br/>
-                     X songs
-                     <br/>
-                 </p>
-             </div>
-         </div>
-         <div class="collection-album-container column fourth">
-             <img src="assets/images/album_covers/01.png"/>
-             <div class="collection-album-info caption">
-                 <p>
-                     <a class="album-name" href="#">The Colors</a>
-                     <a class="album-name" href="album.html">The Colors</a>
-                     <br/>
-                     <a href="#">Pablo Picasso</a>
-                     <a href="album.html">Pablo Picasso</a>
-                     <br/>
-                     X songs
-                     <br/>
-                 </p>
-             </div>
-         </div>
-         <div class="collection-album-container column fourth">
-             <img src="assets/images/album_covers/01.png"/>
-             <div class="collection-album-info caption">
-                 <p>
-                     <a class="album-name" href="#">The Colors</a>
-                     <br/>
-                     <a href="#">Pablo Picasso</a>
-                     <br/>
-                     X songs
-                     <br/>
-                 </p>
-             </div>
-         </div>
-         <div class="collection-album-container column fourth">
-             <img src="assets/images/album_covers/01.png"/>
-             <div class="collection-album-info caption">
-                 <p>
-                     <a class="album-name" href="#">The Colors</a>
-                     <br/>
-                     <a href="#">Pablo Picasso</a>
-                     <br/>
-                     X songs
-                     <br/>
-                 </p>
-             </div>
-         </div>
+          <div class="collection-album-container column fourth">
+        
      </section>
+              <script src="scripts/collection.js"></script>
+
      </body>
  </html>
