--- a/collection.html
+++ b/collection.html
@@ -22,6 +22,7 @@
           <div class="collection-album-container column fourth">
         
      </section>
+             <script src="https://code.jquery.com/jquery-2.1.3min.js"></script>
               <script src="scripts/collection.js"></script>
 
      </body>
